<resources>
    <string name="app_name">Happy Birthday Website Maker</string>
    <string name="set_btn_name">Please set button name</string>
    <string name="here">Here</string>
    <string name="add_atleast_one_message">Please add at least one message</string>
    <string name="didnt_set_background">You didn\'t set background photo</string>
    <string name="please_try_again">Please try again</string>
    <string name="please_try_again_still">Please try again. If still not working, contact with developer</string>
    <string name="website_title">Website Title</string>
    <string name="website_title_set">Set name for website which shown in website link</string>
    <string name="website_title_hint">e.g. Happy Birthday John</string>
    <string name="turnon_light">Turn On The Light</string>
    <string name="turnon_light_set_name">Set name for button which turn on the light</string>
    <string name="turnon_light_hint">e.g. Turn on the light</string>
    <string name="play_music">Play Music</string>
    <string name="play_music_set_name">Set name for button which plays music</string>
    <string name="play_music_hint">e.g. Play music</string>
    <string name="lets_decorate">Let\'s Decorate</string>
    <string name="lets_decorate_set_name">Set name for button which decorates screen</string>
    <string name="lets_decorate_hint">e.g. Let\'s decorate</string>
    <string name="fly_balloons">Fly Balloons</string>
    <string name="fly_balloons_set_name">Set name for button which fly balloons</string>
    <string name="fly_ballons_hint">e.g. Fly balloons</string>
    <string name="birthday_cake">Birthday Cake</string>
    <string name="birthday_cake_set_name">Set name for button which show birthday cake</string>
    <string name="birthday_cake_hint">e.g. Show Birthday Cake</string>
    <string name="light_candle">Light Candle</string>
    <string name="light_candle_set_name">Set name for button which light candle</string>
    <string name="light_candle_hint">e.g. Light candle</string>
    <string name="happy_birthday">Happy Birthday</string>
    <string name="happy_bithday_set_name">Set name for button</string>
    <string name="happy_birthday_hint">e.g. Happy Birthday</string>
    <string name="messages_for_you">Message For You</string>
    <string name="messages_for_you_set_name">Set name for button which show message in order</string>
    <string name="messages_for_you_hint">e.g. Message for you</string>
    <string name="photo_not_selected">Photo could not be selected. Please try again</string>
    <string name="enable_permission">Please enable storage permission to select photo</string>
    <string name="are_you_sure">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="photo_selected">Photo Selected</string>
    <string name="please_check_internet">Please check internet connection</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_mail">Please enter mail</string>
    <string name="please_enter_surname">Please enter surname</string>
    <string name="please_enter_valid_mail">Please enter valid email</string>
    <string name="url_copied">Website URL copied</string>
    <string name="contact_dev_get_mail">Please contact with developer to get email</string>
    <string name="billing_not_available">Billing is not available sorry. You can contact with developer</string>
    <string name="there_is_mistake">Ops.. Sorry there is a mistake</string>
    <string name="there_is_error_try_again">There is a error. Please try again</string>
    <string name="purchase_cancelled">Purchase cancelled</string>
    <string name="payment_pending">Your payment is pending. Please complete yout payment</string>
    <string name="can_set_link_name">You can set link name</string>
    <string name="can_btn_turnon_light">You can change the name of the button below\n\nThis button turn on the light</string>
    <string name="can_btn_play_music">You can change the name of the button below\n\nThis button plays the music</string>
    <string name="can_btn_decorate">You can change the name of the button below\n\nThis button decorates the screen</string>
    <string name="can_btn_fly_ballons">You can change the name of the button below\n\nThis button fly the balloons</string>
    <string name="can_btn_show_cake">You can change the name of the button below\n\nThis button shows the cake</string>
    <string name="can_btn_light_canle">You can change the name of the button below\n\nThis button lights the candle</string>
    <string name="can_btn_just_text">You can change the name of the button below\n\nThis button just contains text</string>
    <string name="can_btn_gets_messages">You can change the name of the button below\n\nThis button gets messages</string>
    <string name="can_btn_add_messages">You can add a few messages. Messages you would add will shown here\n\n You shouldn\'t add long message</string>
    <string name="can_btn_set_photo">You can set the background you want\n\nPhone-sized photo looks better</string>
    <string name="please_enter_message">Plase enter message</string>
    <string name="message_added">Message added</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="edit">Edit</string>
    <string name="create_website">Create Website</string>
    <string name="demo_unpaid">Demo-Unpaid\n\nPlease create website if you want to get website link</string>
    <string name="play_video">Play Video</string>
    <string name="main_welcome_msg">Create a beautiful happy birthday website easily\n\nYou can see the website via the video above</string>
    <string name="main_welcome_title">Happy Birthday\nWebsite Maker</string>
    <string name="my_websites">My Websites</string>
    <string name="there_is_no_website">There is no website. You must create new one</string>
    <string name="link_send_email">The website link will be sent to your email address</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="create">Create</string>
    <string name="email">Email</string>
    <string name="add">Add</string>
    <string name="click_here_for_help">Click here for help</string>
    <string name="select_photo">Select Photo</string>
    <string name="copy_link">COPY LINK</string>
    <string name="wish_messages">Wish Messages</string>
    <string name="add_a_few_messages_which_will_display_in_order">Add a few messages which will display in order</string>
    <string name="ex_i_love_you">Ex. I love you</string>
    <string name="background_photo">Background Photo</string>
    <string name="set_background_with_picture_you_will_select">Set background with picture you will select</string>
</resources>
