<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetContainer"
    android:background="@drawable/bottom_sheet_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/mainPart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_helper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center|center_horizontal|center_vertical"
            android:padding="15dp"
            android:text="@string/create_website"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="#000" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="7dp"
            android:gravity="center"
            android:text="@string/link_send_email"
            android:textSize="18sp" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="#8E8E8E" />

        <EditText
            android:id="@+id/editText1_bottom_sheet"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="7dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName|textAutoCorrect" />


        <EditText
            android:id="@+id/editText2_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="7dp"
            android:ems="10"
            android:hint="@string/surname"
            android:inputType="textPersonName|textAutoCorrect" />

        <EditText
            android:id="@+id/editText3_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="7dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="5dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="10dp"
            android:theme="@style/Theme.MaterialComponents.Light"
            android:text="@string/create" />


    </LinearLayout>
</RelativeLayout>