<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9fafc">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingBottom="50dp">

        <ImageView
            android:id="@+id/pager_item_add_photo_image"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="60dp"
            android:src="@mipmap/ic_add_photo" />

        <TextView
            android:id="@+id/pager_item_add_photo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/background_photo"
            android:textColor="@color/colorTextPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pager_item_add_photo_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/set_background_with_picture_you_will_select"
            android:textColor="@color/colorTextSecondary"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_add_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/select_photo"
            android:textAllCaps="false" />

        <ImageView
            android:id="@+id/helpButton_addPhoto"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_help" />

        <TextView
            android:id="@+id/textView_add_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:text="@string/click_here_for_help" />
    </LinearLayout>

</RelativeLayout>